§0.4.247 Layer 2.5.2 — TlalocRunner real body (wire-format validation + identity-transform copy) + 5 end-to-end tests
Layer 2.5 phase 2. Replaces L2.5.1's echo stub with a real TlalocRunner
body that reads a SerializedBufferHandle JSON pointer, validates the
on-disk binary wire format (magic / version / payload SHA-256), copies
the input bytes to the consumer's output_handle_uri, and emits an
OutputData JSON document containing the produced SerializedBufferHandle.

Why identity-transform v1: real dispatch (StableHLO → PJRT/IREE) needs
the runtime image's full classpath which ships in L2.5.5. The identity
transform proves the wire-format end-to-end without the heavy runtime —
the runner faithfully consumes a producer's serialized handle and emits
a structurally-identical handle pointing at a byte-for-byte copy. v2
real-dispatch ships when the runtime image lands.

Changes:

- TlalocRunner.main() rewritten:
  * Parse params (artifact_uri, manifest_ref, input_handle, output_handle_uri)
  * No-op fallthrough when handles absent (source / metadata-only steps)
  * Read input file, validate [MAGIC=TLAL][VERSION=1][DESC_LEN][DESC]
    [PAYLOAD_LEN][PAYLOAD] wire format, hash payload bytes
  * Compare against handle's contentHash; mismatch throws IllegalStateException
  * Identity-copy input bytes to output_handle_uri
  * Compose output SerializedBufferHandle JSON (same hash, payload unchanged)
  * Write OutputData JSON

- New TlalocRunnerEndToEndTest (5 tests):
  * runnerCopiesValidatedInputBytesToOutputUri (round-trip pin)
  * runnerEmitsNoOpOutputWhenInputHandleAbsent
  * runnerFailsOnContentHashMismatch
  * runnerFailsOnBadMagicBytes
  * runnerRejectsArgCountMismatch

Decisions:

- No io.tlaloc:maestro on runner classpath in v1. Wire format is re-
  implemented in pure Java. Composite-build dep substitution to Tlaloc's
  Kotlin :maestro defers to L2.5.5 when the runtime image needs it for
  real. ~30 Java lines mirror Tlaloc's canonical Kotlin implementation
  against th